--- a/20230704.html
+++ b/20230704.html
@@ -78,7 +78,7 @@
     <textarea name="" id="" cols="30" rows="10"></textarea>
     <br />
     <table border="1" cellspacing="0" , cellpadding="2">
-      <!-- cellspacing : 칸 사이 여백-->
+      <!-- cellspacing : 칸 사이 여백 / cellpadding : 패딩-->
       <tr>
         <th>이름</th>
         <th>나이</th>
