--- a/prac.html
+++ b/prac.html
@@ -6,76 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      td {
+      @font-face {
+        font-family: "KyoboHandwriting2022khn";
+        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KyoboHandwriting2022khn.woff2")
+          format("woff2");
+        font-weight: normal;
+        font-style: normal;
+      }
+      h3 {
+        background-color: brown;
+        border-radius: 5px;
         text-align: center;
+        padding: 5px;
+        font-family: "KyoboHandwriting2022khn";
+      }
+
+      textarea:hover {
+        background-color: beige;
+      }
+
+      textarea {
+        background-color: burlywood;
+        border-radius: 20px;
+        border: 0;
+      }
+
+      button {
+        padding: 5px;
+        background-color: green;
+        color: white;
+        border: 1px solid green;
+        border-radius: 3px;
+      }
+
+      input[type="text"] {
+        border: 1px solid orangered;
+        background-color: orange;
+        margin-bottom: 2px;
+      }
+
+      input[type="email"] {
+        border: 1px solid blue;
+        background-color: skyblue;
       }
     </style>
   </head>
   <body>
-    <table border="1" cellspacing="0" cellpadding="5">
-      <tr>
-        <th>구분</th>
-        <th>음료</th>
-        <th>가격</th>
-        <th>이미지</th>
-      </tr>
-      <tr>
-        <td rowspan="2">커피류</td>
-        <td>아이스아메리카노</td>
-        <td>4500 원</td>
-        <td>
-          <a
-            href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=110563"
-          >
-            <img
-              src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[110563]_20210426095937808.jpg"
-              alt=""
-            />
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>돌체라떼</td>
-        <td>5500 원</td>
-        <td>
-          <a
-            href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=128692"
-          >
-            <img
-              src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[128692]_20210426091933665.jpg"
-              alt=""
-            />
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td rowspan="2">주스류</td>
-        <td>자바칩 프라푸치노</td>
-        <td rowspan="2">6000 원</td>
-        <td>
-          <a
-            href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=168016"
-          >
-            <img
-              src="https://image.istarbucks.co.kr/upload/store/skuimg/2021/04/[168016]_20210415154152122.jpg"
-              alt=""
-            />
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>제주 쑥떡 크림 프라푸치노</td>
-        <td>
-          <a
-            href="https://www.starbucks.co.kr/menu/drink_view.do?product_cd=9200000002090"
-          >
-            <img
-              src="https://image.istarbucks.co.kr/upload/store/skuimg/2022/03/[9200000002090]_20220329144732789.jpg"
-              alt=""
-            />
-          </a>
-        </td>
-      </tr>
-    </table>
+    <h3>설문조사</h3>
+    이름 <input type="text" />
+    <br />
+    이메일
+    <input type="email" placeholder="qwer1234@naver.com" /> <br /><br />
+
+    <h3>나이</h3>
+    <div class="age">
+      <input type="radio" name="" id="" />10대
+      <input type="radio" name="" id="" />20대
+      <input type="radio" name="" id="" />30대
+      <input type="radio" name="" id="" />40대
+      <input type="radio" name="" id="" />50대
+      <input type="radio" name="" id="" />60대 이상
+    </div>
+
+    <br /><br />
+    <h3>원하는 강의(복수응답 가능합니다.)</h3>
+    <input type="checkbox" name="" id="" />html
+    <input type="checkbox" name="" id="" />css
+    <input type="checkbox" name="" id="" />javascript <br /><br />
+
+    <textarea name="" id="" cols="60" rows="10"></textarea>
+    <button>제줄</button>
   </body>
 </html>
