--- a/20230708.html
+++ b/20230708.html
@@ -59,7 +59,7 @@
         animation-delay: 1s;
       }
 
-      /* %에 따라 css 변경 */
+      /* %에 따라 css 변경, 속성 줄때 0으로 주더라도 모두 다 들어가있어야함 */
       @keyframes myanim {
         0% {
           left: 0px;
