--- a/20230711.html
+++ b/20230711.html
@@ -100,5 +100,7 @@
     <button onclick="test()">버튼</button>
     <div style="background-color: yellow" onclick="test()">안녕</div>
     <input type="text" onchange="test2(this)" value="asdf" />
+    <!-- this 매개변수 시 태그 넘김-->
+    <!-- -->
   </body>
 </html>
