--- a/20230712.html
+++ b/20230712.html
@@ -135,6 +135,11 @@
       // random : 랜덤값
       //min~max 1~10
       console.log(Math.random() * 9 + 1);
+
+      // round, floor, ceil
+      // 반올림  내림    올림
+      console.log(Math.round(1.3));
+      console.log(Math.random(1.8));
     </script>
   </head>
   <body></body>
