--- a/20230713-2.html
+++ b/20230713-2.html
@@ -91,7 +91,7 @@
 
         4.
         HTMLCollection : 실제배열 x, foreach 사용불가
-        NodeList : 실제배열 o, 랙foreach 가능
+        NodeList : 실제배열 o, foreach 가능
          
         
     */
